RReplaced method with toList